# app_timesheet

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  COVERAGE_REPORT.md  Jenkinsfile  README.md  ROOT_CAUSE_ANALYSIS.md  SECURITY.md  SECURITY_REVIEW.md  TECHNICAL_SUMMARY.md  docker-compose.sonarqube.yml  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  repo-documentation.html  requirements.txt
.devin/: environment.yaml
.github/: SDLC_AGENT_SETUP.md  SNYK_AGENT_SETUP.md
.husky/: pre-commit
ai-threat-intelligence-framework/: .env.example  .gitignore  Dockerfile  README.md  create_notebook.py  docker-compose.yml  pyproject.toml  research_experiments.ipynb
ai-threat-intelligence-framework/config/: settings.py
ai-threat-intelligence-framework/tests/: __init__.py
ai-threat-intelligence-framework/tests/integration/: test_api.py
ai-threat-intelligence-framework/tests/unit/: test_domain_models.py  test_language_detection.py  test_llm_analyzer.py  test_nvd_collector.py  test_preprocessor.py
ai-threat-intelligence-framework/threat_intel/: __init__.py  cli.py
ai-threat-intelligence-framework/threat_intel/analyzers/: __init__.py  llm_analyzer.py
ai-threat-intelligence-framework/threat_intel/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
ai-threat-intelligence-framework/threat_intel/collectors/: __init__.py  github_advisory_collector.py  nvd_collector.py
ai-threat-intelligence-framework/threat_intel/mitigators/: __init__.py  mitigation_engine.py
ai-threat-intelligence-framework/threat_intel/models/: __init__.py  database.py  domain.py
ai-threat-intelligence-framework/threat_intel/preprocessors/: __init__.py  code_preprocessor.py
ai-threat-intelligence-framework/threat_intel/scanners/: __init__.py  git_scanner.py  repo_scanner.py
ai-threat-intelligence-framework/threat_intel/utils/: db.py  language_detection.py  logging.py
app/: main.py  market_data.py  news_fetcher.py
aramco-growth/: index.html  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  jest.config.js  package-lock.json  package.json  requirements.txt  stryker.config.mjs
backend-spring/: README.md  pom.xml
banking-edf/: README.md  index.html  package-lock.json
config/: .env.example  prometheus.yml
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYMENT.md
dotnet-browser-launcher/: Program.cs
e2e/: accessibility.spec.ts  auth.spec.ts  clients.spec.ts  helpers.ts  login.spec.ts  package.json  playwright.config.ts  reports.spec.ts  timesheet.spec.js  timesheet.spec.ts  work-entries.spec.ts
e2e-tests/: timesheet_e2e.robot
k8s/: ingress.yaml  (+6 more)
lingo-master-server/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
lingo-master-server/ai-services/llm/: start_vllm.sh
lingo-master-server/ai-services/tts/: Dockerfile  requirements.txt  tts_server.py
lingo-master-server/api/: config.py  main.py
lingo-master-server/api/ai/: cache.py  llm_service.py  prompts.py  router.py  tts_service.py
lingo-master-server/api/analytics/: router.py  service.py
lingo-master-server/api/auth/: jwt_handler.py  models.py  router.py  service.py
lingo-master-server/api/database/: connection.py  models.py
lingo-master-server/api/sync/: conflict_resolver.py  models.py  router.py  service.py
lingo-master-server/api/users/: models.py  router.py  service.py
lingo-master-server/api/utils/: minio_client.py  redis_client.py
lingo-master-server/api/words/: models.py  router.py  service.py
lingo-master-server/data-pipeline/: process_ecdict.py  process_jmdict.py
lingo-master-server/scripts/: init_db.sql  seed_data.py
lingo-master-server/tests/: conftest.py  test_ai.py  test_analytics.py  test_auth.py  test_sm2_algorithm.py  test_sync.py  test_users.py  test_words.py
(+550 files in other folders)
